Fixed cart spacing

--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -340,7 +340,7 @@
         height: 95%;
     }
     .order-summary > .other-information {
-        margin-top: 40%;
+        margin-top: 50%;
     }
     .order-summary > .other-information-confirmation {
         margin-top: 60%;
